--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Galileo part of Caffeine Routine",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha -c",
     "start": "node src/index.js"
   },
   "repository": {
