Setup eslint with AirBnB options

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "mocha -c",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "lint": "node_modules/.bin/eslint **/**.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,11 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "eslint": "^3.17.1",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.0",
     "mocha": "^3.2.0",
     "rewire": "^2.5.2",
     "supertest": "^3.0.0"
