--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/CodeSpaceHQ/caffeine-routine-galileo#readme",
   "dependencies": {
     "body-parser": "^1.17.1",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "mraa": "^1.5.1",
+    "jsupm_i2clcd": "^1.0.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
@@ -31,6 +33,7 @@
     "eslint-plugin-react": "^6.10.0",
     "mocha": "^3.2.0",
     "rewire": "^2.5.2",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "underscore": "^1.8.3"
   }
 }
