--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
   "homepage": "https://github.com/CodeSpaceHQ/caffeine-routine-galileo#readme",
   "dependencies": {
     "body-parser": "^1.17.1",
-    "express": "^4.15.2",
-    "mraa": "^1.5.1",
-    "jsupm_i2clcd": "^1.0.2"
+    "express": "^4.15.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
