--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Galileo part of Caffeine Routine",
   "main": "src/index.js",
   "scripts": {
-    "test": "mocha -c",
+    "test": "nyc mocha -c",
     "start": "node src/index.js",
-    "lint": "node_modules/.bin/eslint **/**.js"
+    "lint": "node_modules/.bin/eslint **/**.js",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -24,12 +25,15 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "coveralls": "^2.12.0",
     "eslint": "^3.17.1",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
+    "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
+    "nyc": "^10.1.2",
     "rewire": "^2.5.2",
     "supertest": "^3.0.0",
     "underscore": "^1.8.3"
