--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "eslint-plugin-react": "^6.10.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
+    "mockery": "^2.0.0",
     "nyc": "^10.1.2",
     "rewire": "^2.5.2",
+    "sinon": "^1.17.7",
     "supertest": "^3.0.0",
     "underscore": "^1.8.3"
   }
